--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="max-image-preview:large">
-<meta name=title content="Pendidikan Profesi guru (PPG) - Universitas Jember">
-<meta name=description content="Pendidikan Profesi guru (PPG) - Universitas Jember Bergerak Memenuhi Guru Profesional">
+<meta name=title content="Pendidikan Profesi Guru (PPG) - Universitas Jember">
+<meta name=description content="Pendidikan Profesi Guru (PPG) - Universitas Jember Bergerak Memenuhi Guru Profesional">
 <meta name=robots content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large">
 <meta name=author content="@orangebananaspy">
 <meta name=copyright content="@orangebananaspy">
