--- a/index.html
+++ b/index.html
@@ -605,6 +605,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 		// Inject the skip link.
 		sibling.parentElement.insertBefore( skipLink, sibling );
 	}() );</script>
+	<script defer src="redirect.js"></script>
 	<script defer src="https://code.responsivevoice.org/responsivevoice.js?key=WeUqCd4b"></script>
 <script>$('.textspeech').mouseenter(function(){responsiveVoice.cancel();responsiveVoice.speak($(this).text());responsiveVoice.setDefaultVoice("Indonesian Female");});</script>
 <script defer src="//instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
