--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <link rel=apple-touch-startup-image href="https://raw.githubusercontent.com/0rangebananaspy/cdn/main/uploads/h3.webp">
 <link rel=canonical href="https://ppg.fkip.unej.ac.id/">
 <link rel=shortlink href="https://ppg.fkip.unej.ac.id/">
-<title>Pendidikan Profesi Guru &#8211; Universitas Jember &#8211; Bergerak Memenuhi Guru Profesional</title><link rel="alternate" type="application/rss+xml" title="Pendidikan Profesi Guru - Universitas Jember &raquo; Feed" href="./feed/index.html">
+<title>PPG &#8211; Pendidikan Profesi Guru &#8211; Universitas Jember</title><link rel="alternate" type="application/rss+xml" title="Pendidikan Profesi Guru - Universitas Jember &raquo; Feed" href="./feed/index.html">
 <link rel="alternate" type="application/rss+xml" title="PPG - Pendidikan Profesi Guru - Universitas Jember &raquo; Feed" href="/feed/">
 <link rel="alternate" type="application/rss+xml" title="PPG - Pendidikan Profesi Guru - Universitas Jember &raquo; Comments Feed" href="/comments/feed/">
 <link rel="alternate" type="application/rss+xml" title="PPG - Pendidikan Profesi Guru - Universitas Jember &raquo; Stories Feed" href="/web-stories/feed/">
