--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <meta name=apple-mobile-web-app-title content=MyPPG>
 <meta name=application-name content=MyPPG>
 <meta name=msapplication-TileImage content="https://raw.githubusercontent.com/0rangebananaspy/cdn/main/uploads/h3.webp"/>
+<meta name="google-site-verification" content="xqb-tF8qSQ5I4s9wl1reL84OrUrupLiB_Xo2GLIB9ts" />
 <script async defer data-website-id="e96ad011-e9fa-41e2-ae13-f00ba98b5c12" src="https://insight.unej.id/umami.js"></script>
 <link rel=apple-touch-startup-image href="https://raw.githubusercontent.com/0rangebananaspy/cdn/main/uploads/h3.webp">
 <link rel=canonical href="https://ppg.fkip.unej.ac.id/">
