--- a/index.html
+++ b/index.html
@@ -724,5 +724,11 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             }
         });
     </script>
+	<script>
+        document.addEventListener('contextmenu', function(e) {
+            e.preventDefault();
+            alert("Whoops!");
+        });
+    </script>
 </body>
 </html>
